--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @import "tailwindcss";
 
-
+@theme {
+  --container-container:1170px;
+  --spacing-p77: 77px; 
+  --text-33: 33px;
+  --font-poppins: "Poppins", sans-serif; 
+  --color-primary:#FAFAFA;
+}
