one page full make done

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --container-container:1170px;
   --spacing-p77: 77px; 
   --text-33: 33px;
-  --font-poppins: "Poppins", sans-serif; 
+  --font-pop: "Poppins", sans-serif; 
   --color-primary:#FAFAFA;
+  --color-secondary:#DB4444;
 }
